# subterfuge

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: cli.rs  game.rs  main.rs  user.rs
