[package]
name = "subterfuge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
clap = { version = "4.5.9", features = ["cargo"] }
json = "0.12.4"
log = "0.4.22"
reqwest = { version = "0.11.24", features = [ "blocking" ] }
simplelog = "0.12.2"
yaml-rust2 = "0.8.1"
